--- a/App_Flutter/pubspec.yaml
+++ b/App_Flutter/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.0.0
-
+  dio: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -107,7 +107,7 @@ flutter:
     - assets/images7/icon10.png
     - assets/images7/icon11.png
     - images/logo.png
-   
+
     - images/hinh1.png
     - images/hinh2.png
     - images/hinh3.png
