--- a/App_Flutter/pubspec.yaml
+++ b/App_Flutter/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   http: ^1.0.0
   dio: ^5.0.0
+  modal_progress_hud_nsn: ^0.3.0
+  shared_preferences: ^2.2.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
