--- a/App_Flutter/pubspec.yaml
+++ b/App_Flutter/pubspec.yaml
@@ -33,11 +33,12 @@ dependencies:
   http: ^1.0.0
   dio: ^5.0.0
   modal_progress_hud_nsn: ^0.3.0
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.5.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   cached_network_image: ^3.4.1
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_test:
